Fig4 and 5 explanations reorganised (still in comments)

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -513,15 +513,10 @@ Operations that store data on Ethereum blockchain modify its global state hence 
 \end{figure}
 %========================%
 
-
-
 %GRAPHS:
-% Figure4: ETH,XRP - (BTC and USD): mostly diagonal movements. Do they move with BTC or not? Shows how cryptocurrencies are volatile. They don't move with BTC
-%Figure5: In Figure~\ref{fig:fiatandcrypto}, CAD and EUR are plotted against two reference currencies: BTC on y-axis and USD on x-axis to illustrate what type of movements government issued fiat currencies exhibit. Similarly, two stablecoins, Tether and BitUSD, are also plotted against the same reference currencies.
-%CAD, EUR,Tether, BitUsd: We expect stablecoins to be close to a vertical line. CAD and EUR are central bank issued "stablecoins" and compared to Tether and BitUsd (crypto stableoins), we can conclude that they are also fairly stable. (same x-axis range!)The graph seems like Tether's having drastic fluctuations. Note that the price change is around 10 cents. The change is accentuated due to the scale.
+%Both in Figure~\ref{fig:fiatandcrypto} and Figure~\ref{fig:all}, the currencies are plotted against two reference currencies: a cryptocurrency, BTC, on y-axis and a fiat currency, USD, on x-axis to capture the movement in their prices against these two different group of currencies. Figure~\ref{fig:fiatandcrypto} illustrates the volatility in cryptocurrencies. Both ETH and XRP exhibit movements mostly in 4/8 and 2/6 directions. Also, the fact that the points are spread in a large range of values indicates drastic changes in ETH price with respect to BTC and USD. Here, the main question to bear in mind is whether ETH and XRP move with BTC. The diagonal movement of the plotted values suggests that they do not move along with BTC.
 
-%Look at the following paragraph, previous text!
-%EUR plot in Figure~\ref{fig:eur} tends to have more movements in the directions 1-5 and 3-7 suggesting that while the value of EUR stays the same according to one axis, it changes according to the other.EUR-USD exchange rate is going under less change, whereas BTC-EUR rate is subject to high volatility.ETH plot in Figure~\ref{fig:eth} illustrates more volatility against BTC and USD, as there are horizontal, vertical and diagonal changes. The fact that the points are spread in a large range of values indicates drastic changes in ETH price with respect to BTC and USD.
+%Compared to the previous figure, Figure~\ref{fig:all} shows stable currencies. CAD and EUR are chosen to show the behavior in two different currency zones. For the stablecoins, Tether and BitUSD are plotted. Both the government-issued currencies and the stablecoins mostly move along the 1/5 direction, showing that a stable currency moves along a vertical line with mild fluctuations. It is important to note that these fluctuations are accentuated due to the scale. For instance, it seems like Tether is undergoing drastic changes in price. However, the price change is around 10 cents.
 
 % TETHER: Does it artificially inflate BTC price? Do they issue un-backed tokens to reinforce BTC price, then sell BTC to fully back tokens?
 %TETHER ATTACK: On October 15, 2018, tether, the market dominating stablecoin with a market cap of $2 billion, was attacked, breaking tether’s peg to USD, dropping its value by 7 percent but simultaneously driving up bitcoin and the whole crypto market by more than 10 percent.
