finished dai part

--- a/stable-coin-paper/sections/stablecoin.tex
+++ b/stable-coin-paper/sections/stablecoin.tex
@@ -196,13 +196,21 @@ Coins in this section try to find a middle-ground. They introduce a single trust
 
 Tokens then created when the equivalent of \$1 USD in ETH is collected, and redeemable for the equivalent of \$1 USD in ETH. Thus the amount of redeemable ETH can grow or shrink as the exchange rate with the USD changes. If it shrinks, the contract that issued the coin holds the difference and returns it to creator of the coin. If it grows, it is problematic because the contract cannot hold an unbounded amount of ETH. Thus the contract collects more than \$1 USD (say \$1.5 USD) when it mints a new coin to provide a buffer against falling ETH prices.
 
-\paragraph{Process.} Alice sets up a DApp that can hold ETH and issue ERC20 tokens called AliceCoins. The DApp determines how much ETH is equivalent to \$1.5 USD using the current exchange rate, provided to the DApp by a trusted oracle. Alice deposits this amount into the DApp and it issues 1 AliceCoin to Alice. Bob purchases 1 AliceCoin from Alice for \$1 USD. Bob transfer the AliceCoin to Carol and Carol returns to the DApp to redeem the coin. The DApp determines how much amount ETH is equivalent to \$1 USD (call this the strike price). If the deposit of ETH in the DApp is greater than the strike price, the DApp pays Carol the strike price and it returns the remainder of the deposited ETH to Alice. If the strike price is less than or equal to the deposit, Carol is paid the entire deposit and Alice is paid nothing (she does however have \$1 USD from Bob).
+\paragraph{Process.} Alice sets up a DApp that can hold ETH and issue ERC20 tokens called AliceCoins. The DApp determines how much ETH is equivalent to \$1.50 USD using the current exchange rate, provided to the DApp by a trusted oracle. Alice deposits this amount into the DApp and it issues 1 AliceCoin to Alice. Bob purchases 1 AliceCoin from Alice for \$1 USD. Bob transfer the AliceCoin to Carol and Carol returns to the DApp to redeem the coin. The DApp determines how much amount ETH is equivalent to \$1 USD (call this the strike price). If the deposit of ETH in the DApp is greater than the strike price, the DApp pays Carol the strike price and it returns the remainder of the deposited ETH to Alice. If the strike price is less than or equal to the deposit, Carol is paid the entire deposit and Alice is paid nothing (she does however have \$1 USD from Bob). In this scenario, Carol may not recover a full \$1 USD and therefore is incentivized to monitor the deposit value, and redeem quickly if the deposit value in USD drops close to the face value of her AliceCoins.
 
-\paragraph{Price Stability.} Justification that bids will never exceed \$1. Justification that offers will be less than \$1.
+\paragraph{Price Stability.} Consider a bid for 1 AliceCoin that is greater than \$1 USD. Bob will sell an AliceCoin immediately for this price and will ask Alice to generate a new AliceCoin, pay her only \$1 USD for this, and keep the rest of the bid value as profit. (More generally, Bob could issue a BobCoin assuming the bid is for any coin backed by this type of contract). Therefore bids in excess of \$1 USD will be fulfilled as long as there are individuals willing to lock up a deposit of ETH that is 1.5x the face-value of what they receive. If there is a shortage of ETH for this purpose, AliceCoins might trade in excess of \$1 USD. It is important to note if Alice underwrites one of these contracts, retains the USD she sells the AliceCoin for, and the ETH/USD exchange rate changes, she will make or lose exactly the same amount of money as she would by simply holding the same amount of ETH she deposited. The exception is if the contract's deposit becomes worth less than the amount that can be redeemed from it --- in this case, Alice loses less money by underwriting the contract (the holder of the coin bears the loss) than if she held ETH.
 
-Conclusion: recap.
+% Case study?
 
-\paragraph{Discussion.} Oracles everywhere
+Next, consider an ask for 1 AliceCoin less than \$1 USD. If the contract backing the coin has an ETH deposit valued at the bid price or more, Bob will immediately purchase the AliceCoin, redeem it for \$1 USD, and keep the difference as profit. If the contract's deposit is worth less than the bid price, the ask will not necessarily be filled. Therefore AliceCoins will trade for less \$1 USD when contracts have insufficient deposits, as might happen following a fast deterioration in the value of ETH relative to USD.
+
+Conclusion: Indirectly-backed coins will fulfill bids greater than \$1 USD assuming there is a willingness for ETH holders to lock up their ETH. Asks less than \$1 USD for an indirectly-backed coin will also be quickly fulfilled when the exchange rate of ETH is favorable (by any amount) or when it decreases by a moderate amount. Asks less than \$1 USD will persist if ETH decreases substantially.
+
+\paragraph{Discussion.} In standard finance, brokerages will lend money to investors but are concerned about getting it back in the case that the investors lose their borrowed money. They generally will require a deposit from the investor, monitor the investor's profits and losses, and liquidate the investor's position if their losses approach the deposited amount (or ask the investor to deposit more). This is premised on the assumption that prices do not fall too quickly to react and that the position can be sold quickly at a good price. Therefore it is a precedented premise that an indirectly-backed stablecoin can be redeemed quickly before the deposit is worth less than the coins, however ETH may be far more volatile than other financial instruments.
+
+There are many design decisions to consider when deploying an indirectly-backed stablecoin: the ratio by which the initial deposit exceeds the redemption value (\eg 1.5x), if coins can be redeemed any time, if a third-party can trigger a redemption (\eg for a fee) if they notice a deposit is close to losing more value than the face value of the coins (before the coin holder does), how close the deposit can get to losing value before such a trigger, and if all deposits backing all such coins should be pooled together, so all coins are interchangeable (`fungible'), or each coin is tied to a specific deposit. Note that while allowing third parties to trigger a redemption seems like a sensible service, if the coin holder is not monitoring the situation, they will end up holding ETH, instead of an AliceCoin, which is still losing value. This mechanism is really only about maintaining the reputation of the stablecoin.
+
+% Jeremy: check the above!
 
 % = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = = %
 
@@ -534,6 +542,8 @@ Operations that store data on Ethereum blockchain modify its global state hence 
 % Talk about Ripple surge in  December 2017 {https://www.forbes.com/sites/jessedamiani/2017/12/22/5-reasons-why-the-ripple-price-is-going-up-so-fast-will-the-xrp-surge-continue/#58337c997cbb}  reasons: altcoins gained importance, Rippe's strategy on partnership and customer acquisition, Ripple's partnersips in Asia, rumors that Coinbase will support xrp, "it's speed (4-second transactions) and low fees also make it appealing to general consumers"
 
 
+
+\subsection{Oracles Everywhere!}
 
 \subsection{Consequences for Central Banking}
 
